Fix table width overflow

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -287,6 +287,7 @@ i {
 
 #content {
   flex-grow: 1;
+  overflow: auto;
   margin: 10px;
   min-height: 250px;
 }
